fixed layout problems

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* Example styles.css */
+  body {
+    min-width: 400px;
+  }
 
    .mytitle {
     font-family: "Poppins", sans-serif;
@@ -66,6 +69,21 @@
   .drivertitleteam {
     display: none;
   }
+  .h5championship {
+    color: rgb(182, 182, 182);
+    font-size: 13px;
+  }
+  .h2name {
+    font-size: 27px;
+    font-weight: bolder;
+    color: ghostwhite;
+  }
+  .storypara {
+    font-size: 13px;
+  }
+  .champtitle2 {
+    font-size: 14px;
+  }
 
 }
 
@@ -85,6 +103,12 @@
   font-weight: 'normal';
   word-spacing: 2px;
 }
+.h2name {
+  font-size: 30px;
+  font-weight: bolder;
+  color: ghostwhite;
+}
+
 }
 
 @media (min-width: 1500px) {
@@ -132,15 +156,19 @@
     font-family: "Montserrat", sans-serif;
     color: rgb(255, 255, 255);
     font-weight: 'normal';
-    font-size: 24px;
+    font-size: 18px;
     word-spacing: 2px;
     margin-bottom: 20px;
+ }
+ .champtitle1 {
+  font-size: 35px;
  }
 
 
 
 
 }
+
 
 .section2 {
   background-image: url("https://images3.alphacoders.com/223/223257.jpg");
